<resources>
    <string name="app_name">Poker</string>
    <string name="single_player">Join</string>
    <string name="multiple_player">Drag</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_poke">PokeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="post1">text</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drag">DragActivity</string>
    <string name="fragments">Fragments</string>
    <string name="firstmsg">Hello to you!</string>
    <string name="secondstring">Are you ready?</string>
    <string name="thridstring">And here we go..</string>
    <string name="fourthstring">Enjoy</string>
    <string name="continueBtn">Continue</string>
    <string name="skipbtn">Skip</string>
    <string name="explain1">Welcome to our server! this aplication can delevier message between customers</string>
    <string name="explain2">at first you should chose your user name and paswword</string>
    <string name="explain3">Than you can use this user name for later login, and dont need to sign upevery time. when you login the app, you connect to the server and can send meesages to the server</string>
    <string name="explain4">each time the server get a new message it send it to all of the users that you can see the messages everybody send</string>
    <string name="explain5">Hope you will use this app correct and enjoy it! let Start!</string>
    <string name="logoUpTab">Liron Karin App</string>
    <string name="title_activity_msgs">msgsActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_checking">checking</string>



    <string name="loading">loading...</string>
    <string name="recieved">data recieved</string>
    <string name="lenError">at least one character</string>
    <string name="emailError">enter a valid email address</string>
    <string name="passwordError">between 1 and 10 alphanumeric characters</string>
    <string name="loginFailed">Login failed</string>
    <string name="usrName">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="post">Post</string>
    <string name="feeds">Feeds</string>
    <string name="msgLoad">Load more messages</string>
    <string name="notiTitle">New messages</string>
    <string name="notiContent">go to app :)</string>


</resources>
