<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin" android:background="@drawable/splash_bg">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"  android:layout_height="wrap_content"
        android:src="@drawable/logo"        android:paddingTop="50dp"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:layout_width="fill_parent"  android:layout_height="wrap_content"
        android:layout_centerInParent="true" android:orientation="vertical">



        <Button
            android:id="@+id/btnJoin" android:textSize="20dp" android:textColor="#FF258dc8"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_marginTop="130dp" android:background="@drawable/button"
            android:text="@string/single_player"/>
        <Button
            android:id="@+id/btnPoke"
            android:textSize="20dp"         android:textColor="#FF258dc8"
            android:layout_width="fill_parent" android:layout_marginTop="15dp"
            android:layout_height="wrap_content" android:background="@drawable/button"
            android:text="@string/multiple_player"/>
        <Button
            android:id="@+id/btnFragments"
            android:textSize="20dp"         android:textColor="#FF258dc8"
            android:layout_width="fill_parent" android:layout_marginTop="15dp"
            android:layout_height="wrap_content" android:background="@drawable/button"
            android:text="@string/fragments"/>
    </LinearLayout>
</RelativeLayout>