<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fitsSystemWindows="true"
android:background="@drawable/splash_bg">


<!--android:layout_width="fill_parent"-->
    <!--android:layout_height="510dip"-->
    <!--android:layout_marginTop="10dip"-->
    <!--android:background="@drawable/splash_bg">-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"  android:layout_height="wrap_content"
        android:src="@drawable/logo"        android:paddingTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/tv_un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="#444444"
        android:text="@string/usrName"
        android:layout_alignTop="@+id/tv_error"
        android:layout_alignLeft="@+id/tv_pw"
        android:layout_alignStart="@+id/tv_pw" />
    <EditText
        android:id="@+id/et_un"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:layout_alignTop="@+id/tv_un"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login" />
    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="#444444"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_un"
        android:layout_marginRight="9dip"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="10dip"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/et_pw"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/tv_pw"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login" />"
    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pw"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="160dip"
        android:text="@string/login" />
    <Button
        android:id="@+id/btn_signupp"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="160dip"
        android:text="@string/signUp" />
    <TextView
        android:id="@+id/tv_error"
        android:layout_width="400dip"
        android:layout_height="100dip"
        android:textSize="7pt"
        android:textColor="#AA0000"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp" />
</RelativeLayout>